fix(test): replace Stream.toList() with Collectors.toList() for Java 11
Stream.toList() is Java 16+ and fails to compile under the module's
Java 11 compiler target. ModelSwitchServiceTest used it at three sites,
breaking CI with 'cannot find symbol'. Swap to collect(Collectors.toList())
and add the import.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>